# omni-port

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  fix_plan.txt  pyproject.toml  setup.sh  test_heuristic.py  test_heuristic2.py
dataset/: all_projects_final.csv
docs/: omniport_implementation_plan.md  plan.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
helpers/: collect_test_results.py
helpers/crate/: Dockerfile  get_test_targets.py  run_build.sh  run_tests.sh
helpers/druid/: get_test_targets.py  run_tests.sh
helpers/elasticsearch/: get_test_targets.py  run_build.sh
helpers/graylog2-server/: Dockerfile  get_test_targets.py  run_build.sh  run_tests.sh
helpers/grpc-java/: Dockerfile  get_test_targets.py  run_build.sh  run_tests.sh
helpers/hadoop/: Dockerfile  get_test_targets.py  run_build.sh  run_tests.sh  (+1 more)
java-microservice/: dependency-reduced-pom.xml  pom.xml  settings.xml
readme/: agent1_localizer.md  agent2_classifier.md  agent3_fastapply.md  agent4_namespace.md  agent5_structural.md  agent6_synthesizer.md  tools_and_utils.md
scratch/: repro_ag2.py
tests/: elasticsearch_test_commits.txt  patches.yaml  run_full_pipeline_shadow.py  run_full_pipeline_shadow_v2.py  run_full_pipeline_shadow_v3.py  run_phase1_shadow.py  run_phase1_shadow_debug.py  run_phase1_shadow_debug2.py  run_phase1_shadow_debug3.py  run_with_telegram_notifications.py  test_agent1_classifier.py  test_agent2_localizer.py  test_java_microservice.py  test_java_microservice_javaparser.py  test_telegram_setup.sh
(+1659 files in other folders)
