[project]
name = "backport-claw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kaushalkahapola", email = "kaushal.21@cse.mrt.ac.lk" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.12",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
